Fix the hash func in super cluster mode; add blurry branch; link from agg to reference tree

--- a/src/Components/FullDendrogram.css
+++ b/src/Components/FullDendrogram.css
@@ -17,6 +17,9 @@
 .entity-name.highlighted {
     fill: blue;
 }
+.entity-name.uncertain-highlighted {
+    fill: #4daf4a;
+}
 
 .box {
     fill: grey;
